add function sum

--- a/JavaScript/Dasar/53_debugger.html
+++ b/JavaScript/Dasar/53_debugger.html
@@ -12,13 +12,24 @@
 
     <script>
         function createFullName(firstName, middleName, lastName) {
-            debugger
+            //debugger
             const fullname = `${firstName}, ${lastName}, ${lastName}`
             return fullname
         }
 
         let nama = createFullName("Genos", "Nda", "Yodaa")
         console.info(nama)
+
+        function sum(...value) {
+            debugger
+            nilai = 0
+            for (number of value) {
+                nilai = number
+            }
+            return nilai
+        }
+
+        console.info(sum(1, 1, 1, 1, 1))
     </script>
 
 </body>
